fixed spacing

--- a/Barmettler_Lana/Homework_6/style5.css
+++ b/Barmettler_Lana/Homework_6/style5.css
@@ -1,115 +1,142 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-*, *::before, *:after {
-    box-sizing: inherit;
+*,
+*::before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    font-family: sans-serif;
-    background: #3494E6;
-    background: -webkit-linear-gradient(to right, #EC6EAD, #3494E6);
-    background: linear-gradient(to right, #EC6EAD, #3494E6);
+  margin: 0;
+  font-family: sans-serif;
+  background: #3494e6;
+  background: -webkit-linear-gradient(to right, #ec6ead, #3494e6);
+  background: linear-gradient(to right, #ec6ead, #3494e6);
 }
 
 a {
-    color: white;
-    letter-spacing: 2px;
-    text-decoration: none;
-    background: rgba(0,0,0,0.2);
-    padding: 20px 5px;
-    display: inline-block;
-    width: 100%;
-    font-weight: 100;
-    text-align: center;
-    transition: all 0.5s;
+  color: white;
+  letter-spacing: 2px;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 20px 5px;
+  display: inline-block;
+  width: 100%;
+  font-weight: 100;
+  text-align: center;
+  transition: all 0.5s;
 }
 
-a:hover { 
-    background:rgba(0,0,0,0.3); 
+a:hover {
+  background: rgba(0, 0, 0, 0.3);
 }
 
-.toggleNav { 
-    display: none; 
+.toggleNav {
+  display: none;
 }
 
-img { 
-    width: 100%; 
+img {
+  width: 100%;
 }
 
 .container {
-    max-width: 1000px;
-    margin: 0 auto;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 input {
-    padding: 10px;
-    border: 0;
+  padding: 10px;
+  border: 0;
 }
 
-section, footer {
-    text-align: center;
-    background:rgba(0,0,0,0.2);
-    padding:20px;
-    margin:20px 0;
-    color:white;
-    font-weight: 100;
-  }
+section,
+footer {
+  text-align: center;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 20px 0;
+  color: white;
+  font-weight: 100;
+}
 
 .navi ul {
-display: flex;
-list-style: none;
-margin: 0;
-padding: 0;
-border: solid 1px black;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: solid 1px black;
 }
 
 .navi li {
-    flex: 3;
+  flex: 3;
 }
 
 .navi .social {
-    flex: 1;
-    padding: 0;
+  flex: 1;
+  padding: 0;
 }
 
 .navi .social img {
-    background-repeat: no-repeat;
-    height: 20px;
-    width: 20px;
+  background-repeat: no-repeat;
+  height: 20px;
+  width: 20px;
 }
 
-@media all and (max-width:1000px) {
-    .navi ul { flex-wrap: wrap; }
-  
-    .navi li { flex: 1 1 50%; }
-  
-    .navi .social { flex: 1 1 25%; }
+@media all and (max-width: 1000px) {
+  .navi ul {
+    flex-wrap: wrap;
   }
 
-@media all and (max-width:500px) {
-    .navi li { flex-basis: 100%; }
-  
-    .container {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .container> * { order: 9999; }
-
-    .navi {order: 1;}
-  
-    .toggleNav { display: block; }
-  
-    .navi ul { display: none; }
-  
-    .navi ul.open { display: flex; }
-  
-    .first { order: 2; }
-  
-    .info { order: 3; }
-  
-    .signup { order: 4; }
+  .navi li {
+    flex: 1 1 50%;
   }
+
+  .navi .social {
+    flex: 1 1 25%;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .navi li {
+    flex-basis: 100%;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container > * {
+    order: 9999;
+  }
+
+  .navi {
+    order: 1;
+  }
+
+  .toggleNav {
+    display: block;
+  }
+
+  .navi ul {
+    display: none;
+  }
+
+  .navi ul.open {
+    display: flex;
+  }
+
+  .first {
+    order: 2;
+  }
+
+  .info {
+    order: 3;
+  }
+
+  .signup {
+    order: 4;
+  }
+}
